--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ nav li{
   display: inline-block;
   width: 24.3%;
   height: 25px;
-  background-color:#e14329;
+  background-color:#DC371B;
   text-align: center;
+  box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
 }
 
 .container{
@@ -55,6 +56,41 @@ nav li{
   position: absolute;
   top: -50px;
 }
+
+.news section{
+  display: inline-block;
+  width: 31%;
+  margin: 0 auto;
+  background-color: white;
+  color: black;
+  font-size: 10px;
+  height: 100%;
+  vertical-align: top;
+  padding: 3px;
+}
+.boards{
+  background-color:white;
+  position: relative;
+}
+
+.boards ul{
+  padding: 0;
+  margin: 0 auto;
+  width: 100%;
+
+}
+.boards li{
+  display: inline-block;
+  margin: 0 4.2px;
+
+}
+
+.boards li img{
+  height: 200px;
+
+}
+
+
 .top-image{
 
 
