--- a/style.css
+++ b/style.css
@@ -1,21 +1,117 @@
+*{
+  box-sizing: border-box;
+}
 body{
   background-image:url("images/bg.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: multiply;
+  /*background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/bg.jpg");*/
+  /*font-family: sans-serif;*/
 }
 
+.container{
+  width: 610px;
+  margin: 10px auto;
+  border: 5px solid white;
+  overflow:hidden;
+  position: relative;
+
+}
+textarea{
+  resize:none;
+  box-shadow: inset 1px 1px rgba(170, 170, 170, 0.5);
+  border: solid 1px rgba(170, 170, 170, 0.5);
+  color: rgba(170, 170, 170, 0.5);
+  padding: 3px 0px 3px 5px;
+}
+
+textarea:required{
+
+}
 ul{
   list-style: none;
 }
+
+#subs{
+  display:inline-block;
+  width: 5%;
+  vertical-align: top;
+
+}
+
+ #subs ul{
+   display:inline-block;
+   line-height: 0px;
+
+
+}
+#social ul span{
+  color: white;
+  font-family: sans-serif;
+  font-size:12px;
+}
+.subs {
+  display: block;
+  background-color: white;
+  height:2px;
+  width: 2px;
+  border-radius: 100%;
+
+}
+#social {
+  display: inline-block;
+  vertical-align: top;
+  float: right;
+
+}
+#social ul:nth-child(1) {
+  position: relative;
+
+}
+
+#social ul ul{
+  display: block;
+  width: 2px;
+  line-height: 0px;
+  position: absolute;
+  top:-4px;
+}
+.social-left{
+  vertical-align: middle;
+  margin-bottom: 17px;
+}
+.subscribe{
+  height: 50px;
+  border: none;
+
+}
+.subscribe li{
+  display: inline-block;
+  color: white;
+  font-size: 10px;
+  font-family: sans-serif;
+  font-weight:lighter;
+}
+
+.subscribe li img{
+  height: 30px;
+  box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
+  -webkit-filter: invert(30%);
+
+}
+
 nav {
-  width: 600px;
+  width: 610px;
   margin: 0 auto;
 }
 
 nav ul{
   width: 100%;
   padding: 0;
+  text-align: center;
 
 }
 nav li{
@@ -23,6 +119,7 @@ nav li{
   text-align: center;
   font-size: 11px;
   line-height: 25px;
+  font-weight: lighter;
 }
 
 .nav-menu{
@@ -31,24 +128,91 @@ nav li{
   height: 25px;
   background-color:#DC371B;
   text-align: center;
+  font-family:sans-serif;
   box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
 }
-
+/*
 .container{
-  width: 600px;
-  height: 200px;
-  margin: 0 auto;
+  width: 610px;
+  height: 210px;
+  margin: 10px auto;
   border: 5px solid white;
   overflow:hidden;
   position: relative;
 
+}*/
+.dotnav{
+  width: 200px;
+  margin: 0 auto;
+  text-align: center;
 }
 
+.dotnav li{
 
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  background-color: white;
+  box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
+}
+
+.dotnav li:nth-child(1){
+  background-color: red;
+  border: 3.3px solid white;
+}
+footer {
+  width: 610px;
+  height: 210px;
+  margin: 10px auto;
+  border: 5px solid white;
+  overflow:hidden;
+  position: relative;
+  background-color: white;
+  color: black;
+  font-family: sans-serif;
+  box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
+
+
+}
+footer section:nth-child(1){
+  width: 55%;
+  display: inline-block;
+  padding: 5px;
+  vertical-align: top;
+}
+
+footer section:nth-child(2){
+  width: 44%;
+  display: inline-block;
+  padding: 5px;
+  color: gray;
+}
+footer p{
+  color: gray;
+  font-size:12px;
+}
+footer ul{
+  display: inline;
+  padding: 0;
+}
+
+footer li{
+  display: inline;
+
+}
+footer li img{
+  height: 20px;
+  -webkit-filter: grayscale(100%);
+}
 #logo img {
   width: 40%;
   position: absolute;
   top: 30px;
+}
+#grid-cover img {
+  position: absolute;
+  opacity: 0.1;
 }
 
 #camera img{
@@ -57,20 +221,45 @@ nav li{
   top: -50px;
 }
 
+.news {
+  /*border-left: 5px solid white;
+  border-right: 5px solid white;
+  border-top: none;
+  border-bottom: none;*/
+  height: 210px;
+  display: flex;
+  border: none;
+}
 .news section{
   display: inline-block;
-  width: 31%;
-  margin: 0 auto;
-  background-color: white;
-  color: black;
+  margin: 2px;
+  color: gray;
   font-size: 10px;
   height: 100%;
   vertical-align: top;
-  padding: 3px;
+  padding: 10px;
+  font-family: sans-serif;
+  box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
+  /*border: 5px solid white;*/
+}
+
+.story {
+  flex:1;
+  background-color: white;
+  /*box-shadow: 0px 2px rgba(170, 170, 170, 0.5);*/
+}
+.news span{
+  color: #C7C7C7;
+}
+.title{
+  color: black;
+  font-size:15px;
 }
 .boards{
   background-color:white;
+  height: 210px;
   position: relative;
+  box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
 }
 
 .boards ul{
@@ -92,6 +281,104 @@ nav li{
 
 
 .top-image{
+box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
+height: 210px; /*-----------------------------------------*/
+
+}
+.profiles{
+  height: 270px;
+  border: none;
+  display: flex;
+}
+.gridcell{
+
+  border: 5px solid white;
+  margin: 2px;
+}
+
+.left{
+  display: flex;
+  flex:2;
+  flex-direction:column;
+  position:relative;
+
+}
+
+.right{
+  flex:1;
+  overflow:hidden;
+  position:relative;
 
 
+}
+.top{
+  display: flex;
+  flex:2;
+
+
+}
+.top-left{
+  flex:1;
+  overflow:hidden;
+  position: relative;
+
+}
+
+.top-right{
+  flex:1;
+  overflow:hidden;
+  position:relative;
+
+}
+.bottom{
+
+  flex:2;
+  position:relative;
+  overflow:hidden;
+
+
+}
+
+.profiles img{
+
+  position:absolute;
+
+}
+
+.top-left img {
+  left:-15%;
+  width: 120%;
+
+}
+.top-right img {
+  width: 120%;
+
+
+}
+.right img{
+  height: 100%;
+  left:-92%;
+
+}
+
+.bottom img{
+  width: 105%;
+  top: -50%;
+}
+input {
+  box-shadow: inset 1px 1px rgba(170, 170, 170, 0.5);
+}
+
+
+input[type=submit]{
+  background-color: #DC371B;
+  border: none;
+  color: white;
+  width: 50%;
+  position: relative;
+  left: 49%;
+}
+form{
+  position: relative;
+  padding: 18px 10px 10px 10px;
 }
