--- a/style.css
+++ b/style.css
@@ -77,11 +77,11 @@ ul{
   width: 2px;
   line-height: 0px;
   position: absolute;
-  top:-4px;
+  top:-8px;
 }
 .social-left{
   vertical-align: middle;
-  margin-bottom: 17px;
+  margin-bottom: 24px;
 }
 .subscribe{
   height: 50px;
@@ -124,7 +124,7 @@ nav li{
 
 .nav-menu{
   display: inline-block;
-  width: 24.3%;
+  width: 24.5%;
   height: 25px;
   background-color:#DC371B;
   text-align: center;
@@ -158,7 +158,7 @@ nav li{
 }
 
 .dotnav li:nth-child(1){
-  background-color: red;
+  background-color: #DC371B;
   border: 3.3px solid white;
 }
 footer {
@@ -209,6 +209,7 @@ footer li img{
   width: 40%;
   position: absolute;
   top: 30px;
+  left: 20px;
 }
 #grid-cover img {
   position: absolute;
@@ -216,9 +217,10 @@ footer li img{
 }
 
 #camera img{
-  width: 125%;
+  width: 145%;
   position: absolute;
-  top: -50px;
+  top: -90px;
+  left: -70px;
 }
 
 .news {
@@ -234,7 +236,7 @@ footer li img{
   display: inline-block;
   margin: 2px;
   color: gray;
-  font-size: 10px;
+  font-size: 8px;
   height: 100%;
   vertical-align: top;
   padding: 10px;
@@ -248,12 +250,25 @@ footer li img{
   background-color: white;
   /*box-shadow: 0px 2px rgba(170, 170, 170, 0.5);*/
 }
+.story p:nth-child(4){
+  line-height: 1.7;
+}
+
+.more{
+  color: #DC371B;
+  font-weight: bold;
+  font-size: 10px;
+  vertical-align: bottom;
+}
 .news span{
   color: #C7C7C7;
+  font-size:10px;
 }
 .title{
   color: black;
   font-size:15px;
+  margin-top:5px;
+  margin-bottom:5px;
 }
 .boards{
   background-color:white;
@@ -292,7 +307,7 @@ height: 210px; /*-----------------------------------------*/
 }
 .gridcell{
 
-  border: 5px solid white;
+  border: 2px solid white;
   margin: 2px;
 }
 
@@ -308,6 +323,7 @@ height: 210px; /*-----------------------------------------*/
   flex:1;
   overflow:hidden;
   position:relative;
+  display; flex;
 
 
 }
@@ -321,6 +337,7 @@ height: 210px; /*-----------------------------------------*/
   flex:1;
   overflow:hidden;
   position: relative;
+  display; flex;
 
 }
 
@@ -328,6 +345,7 @@ height: 210px; /*-----------------------------------------*/
   flex:1;
   overflow:hidden;
   position:relative;
+  display: flex;
 
 }
 .bottom{
@@ -335,6 +353,7 @@ height: 210px; /*-----------------------------------------*/
   flex:2;
   position:relative;
   overflow:hidden;
+  display: flex;
 
 
 }
@@ -357,7 +376,7 @@ height: 210px; /*-----------------------------------------*/
 }
 .right img{
   height: 100%;
-  left:-92%;
+  left:-102%;
 
 }
 
@@ -365,6 +384,39 @@ height: 210px; /*-----------------------------------------*/
   width: 105%;
   top: -50%;
 }
+
+.name-small{
+  flex:1;
+  position:absolute;
+  color: white;
+  text-align: center;
+
+}
+.name-large{
+  flex: 2;
+  position: absolute;
+  color: white;
+  text-align:center;
+  width: 100%;
+}
+.name-small p, .name-large p{
+  text-align: center;
+
+  font-family: tahoma, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.name-large p{
+  width:100%;
+  margin-top:10%;
+}
+
+.right .name-small p{
+   margin-top:50%;
+}
+
+
 input {
   box-shadow: inset 1px 1px rgba(170, 170, 170, 0.5);
 }
