--- a/style.css
+++ b/style.css
@@ -131,16 +131,7 @@ nav li{
   font-family:sans-serif;
   box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
 }
-/*
-.container{
-  width: 610px;
-  height: 210px;
-  margin: 10px auto;
-  border: 5px solid white;
-  overflow:hidden;
-  position: relative;
 
-}*/
 .dotnav{
   width: 200px;
   margin: 0 auto;
@@ -286,18 +277,19 @@ footer li img{
 .boards li{
   display: inline-block;
   margin: 0 4.2px;
-
+  position: relative;
 }
 
 .boards li img{
   height: 200px;
-
+  position: relative;
 }
 
 
 .top-image{
 box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
-height: 210px; /*-----------------------------------------*/
+height: 210px;
+
 
 }
 .profiles{
@@ -325,8 +317,12 @@ height: 210px; /*-----------------------------------------*/
   position:relative;
   display; flex;
 
-
 }
+
+.right:hover{
+  animation: borderFlash 1.5s infinite;
+}
+
 .top{
   display: flex;
   flex:2;
@@ -340,7 +336,9 @@ height: 210px; /*-----------------------------------------*/
   display; flex;
 
 }
-
+.top-left:hover{
+  animation: borderFlash 1.5s infinite;
+}
 .top-right{
   flex:1;
   overflow:hidden;
@@ -348,14 +346,20 @@ height: 210px; /*-----------------------------------------*/
   display: flex;
 
 }
+
+.top-right:hover{
+  animation: borderFlash 1.5s infinite;
+}
 .bottom{
 
   flex:2;
   position:relative;
   overflow:hidden;
   display: flex;
+}
 
-
+.bottom:hover{
+  animation: borderFlash 1.5s infinite;
 }
 
 .profiles img{
@@ -433,4 +437,41 @@ input[type=submit]{
 form{
   position: relative;
   padding: 18px 10px 10px 10px;
+}
+
+
+/*.top-image{
+  @-webkit-animation: borderFlash 3s infinite;
+}*/
+
+.nav-menu{
+  position:relative;
+
+}
+.nav-menu:hover{
+  animation: kickFlip 1s infinite;
+}
+
+.boards li img:hover{
+  animation: showOff 2s infinite;
+}
+
+@-webkit-keyframes borderFlash{
+  0% {border-color:white;}
+  50% {border-color:#DC371B;}
+  100% {border-color:white;}
+}
+
+@-webkit-keyframes showOff{
+  0% {transform:scale(1.0);}
+  50% {transform: scale(1.5);}
+  100% {transform:scale(1.0);}
+}
+
+@-webkit-keyframes kickFlip{
+  0% {transform: rotate(0deg);}
+  25% {transform: rotate(15deg);}
+  50% {transform: rotate (30deg);}
+  75% {transform: rotate (15deg);}
+  100% {transform: rotate(0deg);}
 }
