--- a/style.css
+++ b/style.css
@@ -439,6 +439,39 @@ form{
   padding: 18px 10px 10px 10px;
 }
 
+.arrow-holder{
+  position: relative;
+}
+.arrow{
+  width: 160px;
+    height: 66px;
+    background-color:#DC371B;
+    display: inline-block;
+    position: absolute;
+    top: 37px;
+    left: 120px;
+    box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
+    color: white;
+    font-family: sans-serif;
+    text-align: center;
+}
+.arrow p{
+  margin-top: 24px;
+}
+.arrow:before {
+  border-bottom: 34px solid #DC371B;
+  border-left: 34px solid transparent;
+  border-right: 34px solid transparent;
+  content: "";
+  height: 0;
+  left: 143px;
+  position: absolute;
+  top: 17px;
+  width: 0;
+  transform: rotate(90deg);
+  /*filter: drop-shadow(20px 20px 20px rgba(0,0,0,0.5));*/
+}
+
 
 /*.top-image{
   @-webkit-animation: borderFlash 3s infinite;
