--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ footer li img{
   height: 100%;
   vertical-align: top;
   padding: 10px;
-  font-family: sans-serif;
+  font-family: tahoma,sans-serif;
   box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
   /*border: 5px solid white;*/
 }
@@ -449,7 +449,7 @@ form{
     display: inline-block;
     position: absolute;
     top: 37px;
-    left: 120px;
+    left: 10%;
     box-shadow: 0px 2px rgba(170, 170, 170, 0.5);
     color: white;
     font-family: sans-serif;
