--- a/sassy.scss
+++ b/sassy.scss
@@ -122,7 +122,8 @@ nav li{
   color: white;
   text-align: center;
   font-size: 10px;
-  line-height: 25px;
+  padding: 2%;
+  /*line-height: 25px;*/
   font-weight: lighter;
   overflow: hidden;
 }
@@ -248,7 +249,7 @@ padding-bottom: 17.2%;
 .profiles{
   /*height: 270px;*/
   border: none;
-  display: flex;
+  display: -webkit-flex;
 
 }
 .gridcell{
@@ -258,17 +259,22 @@ padding-bottom: 17.2%;
 }
 
 .left{
-  display: flex;
-  flex:2;
-  flex-direction:column;
+  display: -webkit-flex;
+  -webkit-flex:2;
+  -webkit-flex-direction:column;
   position:relative;
+  display: flex;
+  flex-direction: column;
+  flex:2;
 }
 
 .right{
+  -webkit-flex:1;
   flex:1;
+  display:flex;
   overflow:hidden;
   position:relative;
-  display: flex;
+  display: -webkit-flex;
   padding-bottom: 44.2%;
 /*  padding-bottom: 25%;*/
 
@@ -279,26 +285,32 @@ padding-bottom: 17.2%;
 }
 
 .top{
+  display: -webkit-flex;
+  -webkit-flex:1;
   display: flex;
-  flex:2;
+  flex:1;
 
 }
 .top-left{
+  -webkit-flex:1;
   flex:1;
   overflow:hidden;
   position: relative;
+  display: -webkit-flex;
   display: flex;
-  padding-bottom: 22.1%;
+  padding-bottom: 22.12%;
 }
 .top-left:hover{
   animation: borderFlash 1.5s infinite;
 }
 .top-right{
-  flex:1;
+  -webkit-flex:1;
+  flex: 1;
   overflow:hidden;
   position:relative;
+  display: -webkit-flex;
   display: flex;
-  padding-bottom: 22.1%;
+  padding-bottom: 22.12%;
 }
 
 .top-right:hover{
@@ -306,11 +318,13 @@ padding-bottom: 17.2%;
 }
 .bottom{
 
-  flex:2;
+  -webkit-flex:1;
+  flex:1;
   position:relative;
   overflow:hidden;
+  display: -webkit-flex;
   display: flex;
-  padding-bottom: 22.1%
+  padding-bottom: 22.12%
 }
 
 .bottom:hover{
@@ -324,13 +338,14 @@ padding-bottom: 17.2%;
 }
 
 .top-left img {
-  left:-15%;
-  width: 120%;
+  left:-20%;
+  width: 125%;
+  /*top:10%;*/
 
 }
 .top-right img {
-  width: 120%;
-
+  width: 125%;
+  /*top: 10%;*/
 
 }
 .right img{
@@ -345,6 +360,7 @@ padding-bottom: 17.2%;
 }
 
 .name-small{
+  -webkit-flex:1;
   flex:1;
   position:absolute;
   color: white;
@@ -352,7 +368,8 @@ padding-bottom: 17.2%;
 
 }
 .name-large{
-  flex: 2;
+  -webkit-flex: 2;
+  flex:2;
   position: absolute;
   color: white;
   text-align:center;
@@ -457,7 +474,7 @@ padding-bottom: 17.2%;
 footer {
   width: 50%;
   /*width: 610px;*/
-  height: 210px;
+  /*height: 210px;*/
   margin: 10px auto;
   border: 5px solid white;
   overflow:hidden;
@@ -596,13 +613,41 @@ form{
   }
 }
 
+@media (max-width: 700px){
+  footer section:nth-child(1){
+    width: 99%;
+  }
+  footer section:nth-child(2){
+    width: 99%;
+    text-align: center;
+  }
+
+  input[type=submit]{
+    left: 0%;
+    width: 25%;
+  }
+  footer  ul {
+    margin-left: 25%;
+  }
+  footer li img{
+    height: 40px;
+  }
+}
 
 @media (max-width: 600px){
   .nav-menu{
     width: 99%;
+
+    li{
+      margin-bottom:1%;
+    }
   }
+
   .skateboards img{
     width: 16%;
+  }
+  nav li{
+    padding: 0.5%;
   }
 }
 
@@ -648,5 +693,11 @@ form{
 
   footer{
     width: 90%;
+  }
+
+}
+@media (max-width: 400px){
+  .bottom{
+    padding-bottom: 0;
   }
 }
